# blue-green-deployment-dbt-postgres-demo

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  docker-compose.postgres.yml  example.env  pyproject.toml
dbt_blue_green_demo/: dbt_project.yml
dbt_blue_green_demo/macros/: swap_database.sql  swap_schema.sql
dbt_blue_green_demo/models/example/: my_first_dbt_model.sql
dbt_blue_green_demo/profiles/: .user.yml  profiles.yml
services/postgres/docker-entrypoint-initdb.d/: create_blue_green_databases.sh  create_blue_green_schemas.sh
